fixed alignment issue on home page

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -61,6 +61,7 @@
 
   .tend-title {
     display: flex;
+    align-items: center;
     gap: 1rem;
 
     .mat-icon {
@@ -68,7 +69,7 @@
     }
 
     .title {
-      font-size: 0.875rem;
+      font-size: 0.9rem;
       font-weight: 400;
     }
   }
